# weather

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  amazon-build  flash-amazon  flash-test  flash-test-then-module
firmware/: build.gradle  firmwaretool.properties  weather.ino
firmware/common/: AmbientSensors.cpp  AmbientSensors.h  FlashStorage.cpp  FlashStorage.h  ModuleHardware.cpp  ModuleHardware.h  Sensors.h  WeatherMeters.cpp  WeatherMeters.h  ambient_sensors.cpp  ambient_sensors.h  board_definition.cpp  board_definition.h  module_hardware.cpp  module_hardware.h  weather_meters.cpp  weather_meters.h
firmware/module/: CMakeLists.txt  arduino-libraries  dependencies.sd  main.cpp  readings.cpp  readings.h  weather_fsm.cpp  weather_fsm.h  weather_module.cpp  weather_module.h
firmware/old/: weather.ino
firmware/test/: AnalogSampling.cpp  AnalogSampling.h  CMakeLists.txt  Check.cpp  Check.h  WeatherMeters.h  arduino-libraries  check.cpp  check.h  debug.cpp  debug.h  dependencies.sd  main.cpp  run-test  test.cpp
hardware/: Socket_Strip_Straight_1x05_Pitch2.54mm.kicad_mod  _autosave-fk-weather.kicad_pcb  d.lib  fk-weather-cache.lib  fk-weather.kicad_pcb  fk-weather.net  fk-weather.pro  fk-weather.sch  fp-lib-table  rj11-6.lib
hardware/gerbers/: fk-weather-B.Cu.gbr  fk-weather-B.Mask.gbr  fk-weather-B.Paste.gbr  fk-weather-B.SilkS.gbr  fk-weather-Edge.Cuts.gbr  fk-weather-F.Cu.gbr  fk-weather-F.Mask.gbr  fk-weather-F.Paste.gbr  fk-weather-F.SilkS.gbr  fk-weather-NPTH.drl  fk-weather.drl
hardware/logos.pretty/: conservify_normal_3500.kicad_mod  ngfk_normal_3500.kicad_mod  osh_normal_3000.kicad_mod
hardware/module-board/: fk-weather-cache.lib  fk-weather-rescue.lib  fk-weather.kicad_pcb  fk-weather.net  fk-weather.pro  fk-weather.sch  sym-lib-table
hardware/sensor-board/: fk-weather-sensors-cache.lib  fk-weather-sensors-rescue.lib  fk-weather-sensors.net  (+4 more)
(+49 files in other folders)
